# GpuInfo

./: .gitignore  CMakeLists.txt  Doxyfile  main.cc
cmake/: Findnvapi.cmake
include/: GpuInfo.h
src/: GpuInfo.cc
